# killMS

./: .dockerignore  .gitignore  AQWeight.py  BLCal.py  CleanSHM.py  ClipCal.py  Dockerfile  InterPol.py  InterpSols.py  Jenkinsfile.sh  MANIFEST.in  MSTools.py  MakeModel.py  MakePlotMovie.py  MergeSols.py  PlotSols.py  PlotSolsIm.py  README.md  SmoothSols.py  TestSpeedNp.py  kMS.py  killMS.py  pyproject.toml  setup.cfg  setup.py
Array/: ModLinAlg.py  NpShared.py
Array/Dot/: Makefile  NpCuda.py  NpDotSSE.py  TestDotSSE.py  dot0.c  dotSSE.c  dotSSE.h
CohJones/: ClassDistributedVisServer.py  ClassJacobian.py  ClassJacobianAntenna.py  ClassLM.py  ClassMS.py  ClassSM.py  ClassSharedData.py  ClassVisServer.py  ClassWirtingerSolver.py  ModLinAlg.py  NpShared.py  PredictGaussPoints_NumExpr.py  killMS.py  progressbar.py
Data/: ClassBeam.py  ClassJones.py  ClassJonesDomains.py  ClassMS.py  ClassReCluster.py  ClassVisServer.py  ClassWeighting.py  MergeJones.py  sidereal.py
Gridder/: Gridder.c  Makefile
Other/: ClassFitAmp.py  ClassFitTEC.py  ClassPrint.py  ClassTimeIt.py  Counter.py  ModChanEquidistant.py  ModColor.py  ModParsetType.py  MyLogger.py  PrintOptParse.py  least_squares.py  logo.py  progressbar.py
PSourceExtract/: ClassIslands.py  MakePModel.py
Parset/: ClassPrint.py  DefaultParset.cfg  DefaultParset.cfg~  MyOptParse.py  PrintOptParse.py  ReadCFG.py
Plot/: GiveNXNYPanels.py  GiveRectSubplot.py  Graph.py
Predict/: ClassImageSM.py  ClassImageSM2.py  Makefile  PredictGaussPoints_NumExpr.py  PredictGaussPoints_NumExpr2.py  PredictGaussPoints_NumExpr3.py  PredictGaussPoints_NumExpr4.py  PredictGaussPoints_NumExpr5.py  TestPredict.py  predict.c  predict.h  predict_np19.c  predict_np19.h
Scripts/: grepall.py
Simul/: DoSimul.py  MakeClusterCat.py  MakeModelImage.py
Sky/: ClassSM.py  ModClusterRadial.py  PredictGaussPoints_NumExpr.py  PredictGaussPoints_NumExpr2.py  PredictGaussPoints_NumExpr3.py  PredictGaussPoints_NumExpr4.py
TEST/: ModelRandom00.txt  ModelRandom00.txt.cluster.npy  ModelRandom00.txt.npy  ModelRandom00.txt.reg  makems.tmp.cfg
TEST/0000.MS/: table.f0  table.f0i  table.f1  table.f2  table.f3  table.f3_TSM0  table.f4  table.f4_TSM0  table.f5  table.f6  table.f7  table.f7_TSM0  vis.DATA  vis.flg  vis.uvw
TEST/0000.MS/ANTENNA/: table.f0
TEST/0000.MS/FEED/: table.f0  table.f0i
TEST/0000.MS/FIELD/: table.f0  table.f0i
TEST/0000.MS/HISTORY/: table.f0
TEST/0000.MS/LOFAR_ANTENNA_FIELD/: table.f0  table.f0i
TEST/0000.MS/OBSERVATION/: table.f0
TEST/0000.MS/POINTING/: table.f0  table.f0i  table.f1
TEST/0000.MS/PROCESSOR/: table.f0
TEST/0000.MS/SPECTRAL_WINDOW/: table.f0  table.f0i
TEST/0000.MS/STATE/: table.f0
TestHarness/LongAcceptanceTests/: TestLOFAR_J1329_p4729.py
TestHarness/ShortAcceptanceTests/: TestLOFAR_J1329_p4729.py  TestLOFAR_J1329_p4729_with_kms.py
Weights/: W_DiagBL.py
Wirtinger/: ClassAverageMachine.py  ClassEvolve.py  ClassJacobianAntenna.py  ClassSolPredictMachine.py  ClassSolverEKF.py  ClassSolverLM.py  ClassWirtingerSolver.py  __init__.py
killMS/: AQWeight.py  BLCal.py  CMakeLists.txt  CleanSHM.py  ClipCal.py  InterpSols.py  MakePlotMovie.py  MergeSols.py  PlotSols.py  PlotSolsIm.py  SmoothSols.py  TestSpeedNp.py  __init__.py  __main__.py  dsc.py  grepall.py  kMS.py
killMS.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
killMS/Array/: CMakeLists.txt  ModLinAlg.py  NpShared.py  RecArrayOps.py
killMS/Array/Dot/: CMakeLists.txt  Makefile  NpCuda.py  NpDotSSE.py  TestDotSSE.py  dot0.c  dotSSE.c
killMS/Data/: ClassBeam.py  ClassJonesDomains.py  ClassMS.py  ClassReCluster.py  ClassVisServer.py  ClassWeighting.py  sidereal.py
killMS/Gridder/: CMakeLists.txt  Gridder.c  Gridder.h  Makefile
killMS/Other/: ClassClip.py  ClassFitAmp.py  ClassFitTEC.py  ClassPrint.py  ClassTimeIt.py  Counter.py  ModChanEquidistant.py  ModColor.py  ModParsetType.py  MyPickle.py  PrintOptParse.py  __init__.py  findrms.py  least_squares.py  logo.py  progressbar.py  rad2hmsdms.py  reformat.py  terminal.py
killMS/Parset/: ClassPrint.py  DefaultParset.cfg  MyOptParse.py  PrintOptParse.py  ReadCFG.py  stimela_schema.yaml  test_recipe.yaml
killMS/Plot/: GiveNXNYPanels.py  GiveRectSubplot.py  Graph.py
killMS/Predict/: CMakeLists.txt  ClassImageSM.py  ClassImageSM2.py  Makefile  PredictGaussPoints_NumExpr.py  PredictGaussPoints_NumExpr3.py  PredictGaussPoints_NumExpr4.py  PredictGaussPoints_NumExpr5.py  predict.c  predict.h  predict_np19.c
killMS/Simul/: DoSimul.py  MakeClusterCat.py  MakeModelImage.py
killMS/Weights/: W_AntFull.py  W_DiagBL.py  W_Imag.py  W_ImagCov.py  W_TimeCov.py
killMS/Wirtinger/: ClassAverageMachine.py  ClassEvolve.py  ClassJacobianAntenna.py  ClassSolPredictMachine.py  ClassSolverEKF.py  ClassSolverLM.py  ClassWirtingerSolver.py
killMS/cmake/: Findpybind11.cmake
killMS2/: ClassJacobianAntenna.py  ClassMS.py  ClassSM.py  ClassWirtingerSolver.py  MakeModel.py  ModCluster.py  ModClusterRadial.py  PredictGaussPoints_NumExpr.py  dsc.py  killMS.py  logo.py
killMS2/Array/: NpShared.py
killMS2/Data/: ClassMS.py
killMS2/Sky/: ClassSM.py  ModCluster.py  ModClusterRadial.py
killMS2/Wirtinger/: ClassJacobianAntenna.py  ClassWirtingerSolver.py
